Service to delete a collaboration group
